finish swagger document
