# code/controllers/stories.js
@@ -2,6 +2,9 @@ let Story = require('../models/stories');
 const userModel = require("../models/users");
 
 exports.getStories = function (req, res) {
+    /*
+    #swagger.description = 'Get all stories.'
+    */
     Story.
         find().
         sort({createdAt: -1}).
@@ -9,35 +12,71 @@ exports.getStories = function (req, res) {
             // console.log(stories)
             if (err) return handleError(err);
             else {
-                res.json(stories);
+                /* #swagger.responses[200] = {
+                       schema: [{$ref: "#/components/schemas/Story"}],
+                       description: 'Get all stories successfully.'
+                } */
+                res.status(200).json(stories);
                 console.log('get all stories success');
             }
     })
 }
 
 exports.getSingleStory = function (req, res){
+    /*
+    #swagger.description = 'Get a single story with given title.'
+    */
+
     let queryData = req.body;
     const title = queryData.story_title;
-    Story.findOne({story_title: title})
-        .then((instance) => {
-            if(instance) {
-                res.json(instance);
-                console.log('get single story success');
-            }else{
-                res.status(404).json('Error: Story not exist!')
-                console.log('Error in get single story')
-            }
-        })
-        .catch((err) => {
-            res.status(400).json('Error: Bad Request!')
-        });
+    if(title){
+        Story.findOne({story_title: title})
+            .then((instance) => {
+                if(instance) {
+                    /* #swagger.responses[200] = {
+                    schema: { $ref: "#/components/schemas/Story" },
+                    description: 'Get a single story by title successfully.'
+                    } */
+                    res.status(200).json(instance);
+                    console.log('get single story success');
+                }else{
+                    /* #swagger.responses[404] = {
+                    description: 'Did not find a story by given title.'
+                    } */
+                    res.status(404).json('Error: Story not exist!')
+                    console.log('Error in get single story')
+                }
+            })
+            .catch((error) => {
+                /* #swagger.responses[500] = {
+                    description: 'Internal Server Error.'
+                }
+                */
+                res.status(500).json('Could not find a story. Error: ' + JSON.stringify(error));
+            });
+    }
+    else{
+        /* #swagger.responses[400] = {
+            description: 'Bad request. Title received is null.'
+        }
+        */
+        res.status(400).send('Bad request. Title received is null');
+    }
 }
 
 
 exports.insert = function (req, res) {
+    /*
+    #swagger.description = 'Add a new story.'
+    */
+
     let userData = req.body;
     if (userData == null) {
-        res.status(403).send('No data sent!')
+        /* #swagger.responses[400] = {
+            description: 'Bad request. Story data received is null.'
+        }
+        */
+        res.status(400).send('Bad request. Story data received is null.')
     }
     
     let story = new Story({
@@ -48,15 +87,21 @@ exports.insert = function (req, res) {
         story_description: userData.story_description,
         date: userData.date
     });
-    // console.log('received: ' + story);
 
     story.save()
         .then ((results) => {
-            // res.json(results);
-            res.json('Add Story Successfully');
+            /* #swagger.responses[201] = {
+            description: 'Add a story successfully.'
+            }
+            */
+            res.status(201).json('Add Story Successfully');
             console.log('Add Story Successfully');
         })
         .catch ((error) => {
+            /* #swagger.responses[500] = {
+                description: 'Internal Server Error. Could not insert - probably incorrect data!'
+            }
+            */
             res.status(500).json('Could not insert - probably incorrect data! ' + JSON.stringify(error));
         })
 
@@ -64,9 +109,16 @@ exports.insert = function (req, res) {
 }
 
 exports.update = function (req, res) {
+    /*
+    #swagger.description = '@todo.'
+    */
     let data = req.body;
     if (data == null) {
-        res.status(403).send('No data sent!')
+        /* #swagger.responses[400] = {
+            description: 'Bad request. Story data received is null.'
+        }
+        */
+        res.status(400).send('Bad request. Story data received is incorrect.')
     }
     Story.findOne({story_title: data.story_title})
         .then((instance) => {
@@ -75,7 +127,6 @@ exports.update = function (req, res) {
                 console.log(data.story_title + ' already exists in mongoDB');
                 res.json(info);
             }else{
-                // console.log(data)
                 let story = new Story({
                     first_name: data.first_name,
                     family_name: data.family_name,
@@ -86,19 +137,23 @@ exports.update = function (req, res) {
                 });
                 story.save()
                     .then ((results) => {
-                        // res.json(results);
-                        res.json('Add Story Successfully');
+                        /* #swagger.responses[201] = {
+                        description: 'Add a story successfully.'
+                        }
+                        */
+                        res.status(201).json('Add Story Successfully');
                         console.log('Add Story Successfully')
                     })
                     .catch ((error) => {
+                        /* #swagger.responses[500] = {
+                            description: 'Internal Server Error. Could not insert - probably incorrect data!'
+                        }
+                        */
                         res.status(500).json('Could not insert - probably incorrect data! ' + JSON.stringify(error));
                     })
             }
         })
-        .catch((err) => {
+        .catch((error) => {
             res.status(400).json('Error: Bad Request!')
         });
-
-
 }
-// Moongose 5.8.11 doesn't support arrow functions with getters (and presumably setters).
