# code/swagger/swaggerDocumentation.json
@@ -1,12 +1,11 @@
 {
-  "openapi": "3.0.2",
+  "swagger": "2.0",
   "info": {
     "version": "1.0.0",
     "title": "StoryClub",
     "description": "User management API",
-    "termsOfService": "http://api_url/terms/",
     "contact": {
-      "name": "COM3504/6504",
+      "name": "COM6504",
       "email": "lliu74@shef.ac.uk",
       "url": "https://github.com/Kity2023"
     },
@@ -15,42 +14,52 @@
       "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
+  "host": "localhost:3000",
   "servers": [
     {
       "url": "http://localhost:3000/",
-      "description": "the only Local server"
+      "description": "the only Local server of StoryClub"
     }
+  ],
+  "basePath": "/",
+  "schemes": [
+    "http"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
   ],
   "paths": {
     "/": {
       "get": {
-        "description": "",
+        "description": "Redirect to login page to verify user at first.",
         "parameters": [],
         "responses": {}
       }
     },
     "/index": {
       "get": {
-        "description": "",
+        "description": "Home page. Display all stories.",
         "parameters": [],
         "responses": {}
       }
     },
     "/allStories": {
       "get": {
-        "description": "",
+        "description": "Get all stories.",
         "parameters": [],
         "responses": {
           "200": {
             "description": "Get all stories successfully.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Story"
-                  }
-                }
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/Story"
+              },
+              "xml": {
+                "name": "main"
               }
             }
           }
@@ -59,7 +68,7 @@
     },
     "/singleStory": {
       "post": {
-        "description": "",
+        "description": "Get a single story with given title.",
         "parameters": [
           {
             "name": "body",
@@ -76,51 +85,97 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Get a single story by title successfully.",
+            "schema": {
+              "$ref": "#/components/schemas/Story"
+            }
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Bad request. Title received is null."
           },
           "404": {
-            "description": "Not Found"
+            "description": "Did not find a story by given title."
+          },
+          "500": {
+            "description": "Internal Server Error."
           }
         }
       }
     },
     "/insertStory": {
       "post": {
-        "description": "",
+        "description": "Add a new story.",
         "parameters": [
           {
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/components/schemas/Story"
+              "type": "object",
+              "properties": {
+                "first_name": {
+                  "example": "any"
+                },
+                "family_name": {
+                  "example": "any"
+                },
+                "story_title": {
+                  "example": "any"
+                },
+                "story_image": {
+                  "example": "any"
+                },
+                "story_description": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                }
+              }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Add a story successfully."
           },
-          "403": {
-            "description": "Forbidden"
+          "400": {
+            "description": "Bad request. Story data received is null."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error. Could not insert - probably incorrect data!"
           }
         }
       }
     },
     "/updateStory": {
       "post": {
-        "description": "",
+        "description": "@todo.",
         "parameters": [
           {
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/components/schemas/Story"
+              "type": "object",
+              "properties": {
+                "story_title": {
+                  "example": "any"
+                },
+                "first_name": {
+                  "example": "any"
+                },
+                "family_name": {
+                  "example": "any"
+                },
+                "story_image": {
+                  "example": "any"
+                },
+                "story_description": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                }
+              }
             }
           }
         ],
@@ -128,21 +183,21 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
+          "201": {
+            "description": "Add a story successfully."
           },
-          "403": {
-            "description": "Forbidden"
+          "400": {
+            "description": "Bad request. Story data received is null."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error. Could not insert - probably incorrect data!"
           }
         }
       }
     },
     "/login": {
       "get": {
-        "description": "",
+        "description": "Login page.",
         "parameters": [],
         "responses": {}
       },
@@ -152,36 +207,7 @@
           {
             "name": "body",
             "in": "body",
-            "schema": {
-              "$ref": "#/components/schemas/User"
-            }
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/logout": {
-      "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/signup": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      },
-      "post": {
-        "tags": [
-          "User"
-        ],
-        "description": "Endpoint para obter um usuário.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
+            "description": "Verify a user",
             "schema": {
               "$ref": "#/components/schemas/User"
             }
@@ -189,54 +215,117 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Verify a user successfully."
+          },
+          "400": {
+            "description": "Bad request. Data received is null."
           },
           "403": {
-            "description": "Forbidden"
+            "description": "User not exist or password incorrect."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error. Could not verify a user - probably incorrect data."
+          }
+        }
+      }
+    },
+    "/logout": {
+      "post": {
+        "description": "Logout. Simply go back to login page.",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/signup": {
+      "get": {
+        "description": "Sign page.",
+        "parameters": [],
+        "responses": {}
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Adding new user",
+            "schema": {
+              "$ref": "#/components/schemas/User"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Add a user successfully."
+          },
+          "400": {
+            "description": "Bad request. Data received is null."
+          },
+          "500": {
+            "description": "Internal Server Error. Could not add a user - probably incorrect data."
+          }
+        }
+      }
+    },
+    "/chat/story/{title}": {
+      "get": {
+        "description": "Enter a chat room.",
+        "parameters": [
+          {
+            "name": "title",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Title of a selected story for discussion",
+            "schema": {
+              "$ref": "#/components/schemas/User"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad request. Title received is null."
           }
         }
       }
     }
   },
   "components": {
-      "schemas": {
-        "Story": {
-          "type": "object",
-          "properties": {
-            "first_name": {
-              "example": "any"
-            },
-            "family_name": {
-              "example": "any"
-            },
-            "story_title": {
-              "example": "any"
-            },
-            "story_image": {
-              "example": "any"
-            },
-            "story_description": {
-              "example": "any"
-            },
-            "date": {
-              "example": "any"
-            }
+    "schemas": {
+      "Story": {
+        "type": "object",
+        "properties": {
+          "first_name": {
+            "example": "any"
+          },
+          "family_name": {
+            "example": "any"
+          },
+          "story_title": {
+            "example": "any"
+          },
+          "story_image": {
+            "example": "any"
+          },
+          "story_description": {
+            "example": "any"
+          },
+          "date": {
+            "example": "any"
           }
-        },
-        "User": {
-          "type": "object",
-          "properties": {
-            "username": {
-              "example": "any"
-            },
-            "password": {
-              "example": "any"
-            }
+        }
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "example": "any"
+          },
+          "password": {
+            "example": "any"
           }
         }
       }
     }
+  }
 }
